# ASS

./: .gitignore  Cargo.toml  LICENSE  README.md  config.cfg
src/: main.rs
src/cli/: cli.rs  mod.rs  utils.rs
src/core/: mod.rs
src/core/auth/: mod.rs  utils.rs
src/core/auth/entities/: user.rs
src/core/commands/: clear_terminal.rs  command.rs  create_group.rs  create_role.rs  delete_password.rs  get_all_groups.rs  get_all_roles.rs  get_password.rs  invoker.rs  mod.rs  new_password.rs  password_group.rs  update_password.rs  user_role.rs
src/core/entities/: cmd_arg.rs  cmd_data.rs  command_payload.rs  group_model.rs  hidden_prompt.rs  mod.rs  prompt.rs  return_data.rs  role_model.rs
src/core/security/: crypto.rs  mod.rs  utils.rs
src/core/utils/: bearer.rs  config_parser.rs  file_io.rs  initializer.rs  mod.rs
src/storage/: database.db  mod.rs  models.rs  storage.rs
src/storage/crud/: auth.rs  group.rs  mod.rs  password.rs  role.rs
