[package]
name = "ass"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.29.0", features = ["bundled"] }
bcrypt = "0.15"
rpassword = "7.3"
zxcvbn = "2"
rand = { version = "0.8.5", features = [] }
magic-crypt = "3.1.9"
